--- a/iso-tools/package.json
+++ b/iso-tools/package.json
@@ -9,7 +9,6 @@
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.3",
-    "@mui/styles": "^5.12.3",
     "@mui/x-date-pickers": "^6.6.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -35,12 +34,10 @@
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-gtm-module": "^2.0.11",
-    "react-json-view": "^1.21.3",
+    "react18-json-view": "^0.2.9",
     "react-markdown": "^8.0.7",
     "react-router-dom": "^6.15.0",
     "react-spinners": "^0.13.8",
-    "react-swipeable-views": "^0.14.0",
-    "react-swipeable-views-utils": "^0.14.0",
     "rehype-raw": "^6.1.1",
     "remark-gfm": "^4.0.0",
     "shiki": "^0.14.4",
