--- a/iso-tools/package.json
+++ b/iso-tools/package.json
@@ -49,7 +49,8 @@
   "scripts": {
     "start": "vite",
     "build": "tsc && vite build && compress-cra",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "clean": "rm -rf dist build"
   },
   "eslintConfig": {
     "extends": [
