--- a/services/backend-service/Ballerina.toml
+++ b/services/backend-service/Ballerina.toml
@@ -2,7 +2,7 @@
 org = "rivindumadushan"
 name = "backend_service"
 version = "0.1.0"
-distribution = "2201.10.4-20250127-170500-e3246f5f"
+distribution = "2201.10.3"
 
 [build-options]
 observabilityIncluded = true
